REOPENED271348
REGRESSION (UI-side compositing?): Sporadic failures in layout tests due to wrong test images
https://bugs.webkit.org/show_bug.cgi?id=271348
Summary REGRESSION (UI-side compositing?): Sporadic failures in layout tests due to w...
Simon Fraser (smfr)
Reported 2024-03-20 16:54:09 PDT
When running layout tests locally on Sonoma on an AS Mac, I can reliably reproduce an issue where some ref tests fail because the test snapshot image is wrong; it is an image of the previous test. I can reproduce this when just running LayoutTests/compositing. It does not always affect the same test.
Attachments
Simon Fraser (smfr)
Comment 1 2024-03-20 16:54:24 PDT
Simon Fraser (smfr)
Comment 2 2024-03-20 17:02:11 PDT
EWS
Comment 3 2024-03-21 14:11:26 PDT
Committed 276494@main (b289d5f2461d): <https://commits.webkit.org/276494@main> Reviewed commits have been landed. Closing PR #26214 and removing active labels.
WebKit Commit Bot
Comment 4 2024-03-26 12:47:42 PDT
Re-opened since this is blocked by bug 271720
Note You need to log in before you can comment on or make changes to this bug.