Source/WebKit/UIProcess/WebPageProxy.cpp
@@ -5698,7 +5698,7 @@ void WebPageProxy::forceRepaint(CompletionHandler<void()>&& callback)
         RefPtr protectedThis = weakThis.get();
         if (!protectedThis)
             return callback();
-        protectedThis->callAfterNextPresentationUpdate(WTFMove(callback));
+        protectedThis->callAfterNextPresentationUpdateAndLayerCommit(WTFMove(callback));
     });
     forEachWebContentProcess([&](auto& webProcess, auto pageID) {
         webProcess.sendWithAsyncReply(Messages::WebPage::ForceRepaint(), [aggregator] { }, pageID);
@@ -11898,6 +11898,13 @@ void WebPageProxy::callAfterNextPresentationUpdate(CompletionHandler<void()>&& c
 #else
     callback();
 #endif
+}
+#endif
+
+#if !PLATFORM(COCOA)
+void WebPageProxy::callAfterNextPresentationUpdateAndLayerCommit(CompletionHandler<void()>&& callback)
+{
+    return callAfterNextPresentationUpdate(WTFMove(callback));
 }
 #endif
 
